syntax = "proto3";
package hello;

message HelloRequest {
    string firstName = 1;
    string lastName = 2;
}

message HelloResponse {
    string greeting = 1;
}

service HelloService {
    rpc GetHelloReq(HelloRequest) returns (HelloResponse);
}